<resources>
    <string name="app_name">RAV-Business</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>


    <!--internet msg-->
    <string name="need_permission">Need Permission</string>
    <string name="goto_settings">Goto Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="go_to_settings_give_permissions">This app needs permission to access your storage and location.
        Go to Settings and Grant the permissions to use these features.</string>
    <string name="action_allow">ALLOW</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="something_wrong">Something went wrong!\nPlease try again.</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">You have lost connection to the Internet. This app is offline.</string>
    <string name="msg_no_internet">No Internet Connection !</string>
    <string name="msg_not_detected_internet">This app is offline. We can not detect any internet connectivity.
        Please check your internet connection and try again.</string>
    <string name="label_retry">Retry</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="allow_storage_permission">Allow Storage Access</string>
    <string name="msg_storage_permission_denied_explanation">Storage permission is required to access images and pdf files,
        which are used in rav  Mobile App, to your device. If you don\'t allow Rav  to access your storage,
        you will not be able to see images on the app. \n\nWould you like to allow us to access your storage?</string>


    <string name="error_field_required">This field is required</string>
    <string name="error_password_required">Please Enter Password</string>


    <string name="action_show_more"><br>View</br></string>

    <!--Error Dialog-->
    <string name="label_error">Error</string>
    <string name="action_try_again">Try Again</string>

    <!--Success Dialog-->
    <string name="label_success">Success</string>
    <string name="msg_sign_up_success">Congratulations! Your account has been created successfully.
        You can now login.</string>
    <string name="action_continue">OK</string>

    <!--Logout Dialog-->
    <!--Logout Dialog-->
    <string name="action_dialog_yes">YES</string>
    <string name="action_dialog_no">NO</string>
    <string name="msg_dialog_logout">Are you sure you want to logout?</string>
    <string name="msg_dialog">Are you sure you want to delete this record?</string>


    <!--Review Dialog-->
    <string name="heading_thank_you">Thank You</string>
    <string name="action_done">Done</string>
    <string name="dialog_action_ok">ओके</string>

    <!--Login Activity-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_user_id">User Id</string>
    <string name="prompt_registered_mobile_number">Enter your Login Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_forgot_password">Forgot password ?</string>
    <string name="action_login">Login</string>
    <string name="error_password_mismatching">New Password &amp; Retyped New Password must be same.</string>
    <string name="error_pin_mismatching"> Generate Pin &amp;Confirm Pin No. must be same.</string>
    <string name="confirm_pin">Please Enter Confirm Pin No.</string>
    <string name="invalid_password">Password must contain at least 6 digits.</string>
    <string name="action_filter">Filter</string>

    <string name="welcome">"Welcome ! "</string>


    <string name="login_failed">"Login failed"</string>
    <string name="title_login_now">Welcome !</string>
    <string name="error_registered_phone_required">Enter your Login Id </string>
    <string name="error_invalid_phone">Please Valid Login Id </string>


    <string name="msg_login">Log in</string>
    <string name="label_enter_via_social_networks">Enter via social networks</string>
    <string name="label_login_with_email">or login with email</string>
    <string name="label_don_t_have_an_account">Don\'t have an account?</string>
    <string name="error_credentials">"Please give your inputs."</string>
    <string name="msg_user_not_exist">You\'re not an authorized user.
        Please sign up to continue in this application.</string>
    <string name="msg_you_dont_have_access">You don\'t have currently access to this app.
        Please contact your account administrator for access.</string>
    <string name="title_not_authorized">Not Authorized</string>
    <string name="Please_Enter_Valid_Email_ID">Please Enter Valid Email Id</string>
    <string name="Please_Enter_Valid_Mobile_No">Please Enter 10 digits Mobile No.</string>

    <string-array name="select_district_array">

    </string-array>
    <string-array name="select_array" />

    <string name="action_change_password">Change Password</string>

    <string name="error_choose_another_file">Sorry! We are facing some issues with this file format. Please select another file.</string>

    <string name="title_activity_main">Dash</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="No_Record_Available">No Record Available.</string>


    <string name="label_followup_date">FollowUp Date :<font color='#FF0000'>*</font></string>
    <string name="label_customer">Customer :<font color='#FF0000'>*</font></string>
    <string name="label_customer_amount">Customer Amount :<font color='#FF0000'>*</font></string>
    <string name="label_associate_wallet_amount">Wallet Amount:<font color='#FF0000'>*</font></string>
    <string name="label_plot_no">Plot No:<font color='#FF0000'>*</font></string>
    <string name="label_height">Height :<font color='#FF0000'>*</font></string>
    <string name="label_width">Width :<font color='#FF0000'>*</font></string>
    <string name="label_plot_area">Plot Area :<font color='#FF0000'>*</font></string>
    <string name="label_plot_booking_plan">Booking Plan :<font color='#FF0000'>*</font></string>
    <string name="label_plot_booking_amount">Booking Amount :<font color='#FF0000'>*</font></string>
    <string name="label_amount_for_booked_hold">Amount For Booked/Hold :<font color='#FF0000'>*</font></string>
    <string name="label_plot_booking_status">Booking Status :<font color='#FF0000'>*</font></string>
    <string name="label_Installments">Installments:<font color='#FF0000'>*</font></string>
    <string name="label_Plot_Cost">Plot Cost:<font color='#FF0000'>*</font></string>
    <string name="label_days">Days:<font color='#FF0000'>*</font></string>

    <string name="label_customer_name">Customer Name :<font color='#FF0000'>*</font></string>
    <string name="label_contact_no">Contact No:<font color='#FF0000'>*</font></string>
    <string name="label_email_id">Email Id:<font color='#FF0000'>*</font></string>
    <string name="label_pincode">PinCode:<font color='#FF0000'>*</font></string>
    <string name="label_state">State:<font color='#FF0000'>*</font></string>
    <string name="label_city">City:<font color='#FF0000'>*</font></string>
    <string name="label_address">Address:<font color='#FF0000'>*</font></string>
    <string name="label_status">Status :<font color='#FF0000'>*</font></string>
    <string name="label_gender">Gender<font color='#FF0000'>*</font></string>

    <string name="label_wallet_amount">Wallet Amount :<font color='#FF0000'>*</font></string>
    <string name="label_payment_type">Payment Type :<font color='#FF0000'>*</font></string>
    <string name="label_nft_no">NFT No:<font color='#FF0000'>*</font></string>
    <string name="label_utr_no">UTR No :<font color='#FF0000'>*</font></string>
    <string name="labelcustomer_name">Customer Name:<font color='#FF0000'>*</font></string>
    <string name="label_amount">Amount<font color='#FF0000'>*</font></string>

    <string-array name="PaymentType">
        <item>--Select--</item>
        <item>Cash</item>
        <item>Cheque</item>
        <item>NEFT</item>
        <item>RTGS</item>
        <item>Online</item>
    </string-array>

    <string name="action_take_from_camera">Take from camera</string>
    <string name="action_choose_from_gallery">Choose from gallery</string>
    <string name="title_add_document">Choose Option</string>
    <string name="hint_select_picture">Select Picture</string>

    <string name="position">Position<font color='#FF0000'>*</font></string>
    <string name="fullName">Full Name:<font color='#FF0000'>*</font></string>
    <string name="mobile">Mobile:<font color='#FF0000'>*</font></string>
    <string name="dob">Date of Birth:<font color='#FF0000'>*</font></string>
    <string name="password">Password:<font color='#FF0000'>*</font></string>
    <string name="confirmPassword">Confirm Password:<font color='#FF0000'>*</font></string>
    <string name="FatherHusband">Father/Husband:<font color='#FF0000'>*</font></string>
    <string name="supportFor">Support For<font color='#FF0000'>*</font></string>
    <string name="subject">Subject<font color='#FF0000'>*</font></string>
    <string name="claimType">Claim Type<font color='#FF0000'>*</font></string>
    <string name="supportType">Support Type<font color='#FF0000'>*</font></string>
    <string name="priority">Priority<font color='#FF0000'>*</font></string>
    <string name="allNo">Transaction /Check /NFT/RTGS/no<font color='#FF0000'>*</font></string>
    <string name="amount">Amount<font color='#FF0000'>*</font></string>
    <string name="date">Date<font color='#FF0000'>*</font></string>
    <string name="IFSCCode">IFSC<font color='#FF0000'>*</font></string>
    <string name="bankName">Bank Name<font color='#FF0000'>*</font></string>
    <string name="branchName">Branch Name<font color='#FF0000'>*</font></string>
    <string name="query">Query<font color='#FF0000'>*</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="my_api_key">ec01f8c2eb6ac402f2ca026dc2d9b8fd</string>
    <string name="error_msg">Sorry! Couldn\'t fetch data.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="menu_refresh">Refresh</string>
    <string name="permissionMessage">Allow Permissions</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="projectName">Project Name:<font color='#FF0000'>*</font></string>
    <string name="blockName">Block Name:</string>
    <string name="plotNo">PlotNo:</string>
    <string name="requesterName">Requester Name:</string>
    <string name="mobileNo">Mobile No:</string>
    <string name="emailId">Email Id:</string>
    <string name="assignTo">Assign To:<font color='#FF0000'>*</font></string>
    <string name="visitStatus">Visit Status:<font color='#FF0000'>*</font></string>
    <string name="requestedDate">Requested Date:<font color='#FF0000'>*</font></string>
    <string name="status">Status:</string>
    <string name="note">Note:</string>
</resources>
